--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
-    background: #7908d6;
+    background: #05eaf1;
 }
 
 .cube {
